# OTUS_Python_Basic

./: README.md
homework_01/: main.py
homework_02/: base.py  engine.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml
