[tool.poetry]
name = "homework-03"
version = "0.1.0"
description = ""
authors = ["Nikolay Kolesnikov"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
